sfdx-source/fflib-working-examples/main/schema/objects/Board_Game__c/fields/Average_Attendee_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Attendee_Rating__c</fullName>
    <description>Average Rating of Board Game By Attendees</description>
    <formula>Total_Attendee_Rating_Value__c / Total_Board_Game_Ratings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average Rating of Board Game By Attendees</inlineHelpText>
    <label>Average Attendee Rating</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>