sfdx-source/fflib-working-examples/main/schema/objects/Board_Game__c/fields/Avg_Weight__c.field-meta.xml
<CustomField>
    <fullName>Avg_Weight__c</fullName>
    <description>Average Complexity provided by BoardGameGeek. On a Scale of 1 to 5, where 5 is the most Complex</description>
    <inlineHelpText>Average Complexity provided by BoardGameGeek. On a Scale of 1 to 5, where 5 is the most Complex</inlineHelpText>
    <label>Avg. Weight</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>