sfdx-source/fflib-working-examples/main/schema/objects/Board_Game__c/fields/BGG_ID__c.field-meta.xml
<CustomField>
    <fullName>BGG_ID__c</fullName>
    <description>This is the Unique ID given by BoardGameGeek for this Board Game. Used for matching Board Game Records when importing from BGG</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the Unique ID given by BoardGameGeek for this Board Game. Used for matching Board Game Records when importing from BGG</inlineHelpText>
    <label>BGG ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>