sfdx-source/fflib-working-examples/main/schema/objects/Board_Game__c/fields/Game_Image__c.field-meta.xml
<CustomField>
    <fullName>Game_Image__c</fullName>
    <formula>Image(If(IsBlank(Image_URL__c),&apos;/resource/No_BGG_Image&apos;,Image_URL__c), Name, 100, 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Game Image</label>
    <type>Text</type>
</CustomField>