sfdx-source/fflib-working-examples/main/schema/objects/Board_Game__c/fields/Is_New__c.field-meta.xml
<CustomField>
    <fullName>Is_New__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Enabled, this Board Game was recently added in the last import</description>
    <inlineHelpText>If Enabled, this Board Game was recently added in the last import</inlineHelpText>
    <label>Is New</label>
    <type>Checkbox</type>
</CustomField>