sfdx-source/fflib-working-examples/main/schema/objects/Board_Game__c/fields/Max_Players__c.field-meta.xml
<CustomField>
    <fullName>Max_Players__c</fullName>
    <description>Maximium Number of Players for Board Game provided by BoardGameGeek</description>
    <inlineHelpText>Maximium Number of Players for Board Game provided by BoardGameGeek</inlineHelpText>
    <label>Max Players</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>