sfdx-source/fflib-working-examples/main/schema/objects/Board_Game__c/fields/Mechanics__c.field-meta.xml
<CustomField>
    <fullName>Mechanics__c</fullName>
    <description>List of Board Game Mechanics for Board Game provided By BoardGameGeek</description>
    <inlineHelpText>List of Board Game Mechanics for Board Game provided By BoardGameGeek</inlineHelpText>
    <label>Mechanics</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>