sfdx-source/fflib-working-examples/main/schema/objects/Board_Game__c/fields/Min_Players__c.field-meta.xml
<CustomField>
    <fullName>Min_Players__c</fullName>
    <description>Minimum Players for Board Game provided by BoardGameGeek</description>
    <inlineHelpText>Minimum Players for Board Game provided by BoardGameGeek</inlineHelpText>
    <label>Min Players</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>