sfdx-source/fflib-working-examples/main/schema/objects/Board_Game__c/fields/New_Icon__c.field-meta.xml
<CustomField>
    <fullName>New_Icon__c</fullName>
    <formula>IF(Is_New__c, &apos;🆕&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New</label>
    <type>Text</type>
</CustomField>