sfdx-source/fflib-working-examples/main/schema/objects/Board_Game__c/fields/Thumbnail_Image__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_Image__c</fullName>
    <formula>Image( If(IsBlank(Thumbnail_URL__c),&apos;/resource/No_BGG_Image&apos;,Thumbnail_URL__c),  Name, 30,30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thumbnail Image</label>
    <type>Text</type>
</CustomField>