sfdx-source/fflib-working-examples/main/schema/objects/Board_Game__c/fields/Thumbnail_URL__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_URL__c</fullName>
    <description>Thumbnail Image URL for Board Game provided By BoardGameGeek</description>
    <inlineHelpText>Thumbnail Image URL for Board Game provided By BoardGameGeek</inlineHelpText>
    <label>Thumbnail URL</label>
    <type>Url</type>
</CustomField>