sfdx-source/fflib-working-examples/main/schema/objects/Board_Game__c/fields/Total_Board_Game_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Total_Board_Game_Ratings__c</fullName>
    <description>Rollup Summary Count of All Board Game Ratings for this Board Game</description>
    <inlineHelpText>Count of All Board Game Ratings for this Board Game</inlineHelpText>
    <label>Total Board Game Ratings</label>
    <summaryFilterItems>
        <field>Board_Game_Rating__c.Rating__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Board_Game_Rating__c.Board_Game__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>