sfdx-source/fflib-working-examples/main/schema/objects/Board_Game__c/fields/Total_Favorited__c.field-meta.xml
<CustomField>
    <fullName>Total_Favorited__c</fullName>
    <description>Rollup Summary of the Total Number of Attendees that Favorited this Game</description>
    <inlineHelpText>Total Number of Attendees that Favorited this Game</inlineHelpText>
    <label>Total Favorited</label>
    <summaryFilterItems>
        <field>Board_Game_Rating__c.Is_Favorite__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Board_Game_Rating__c.Board_Game__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>