sfdx-source/fflib-working-examples/main/schema/objects/Board_Game__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Thumbnail_Image__c</columns>
    <columns>New_Icon__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>